--- a/CubeCollision/CubeCollision.Application/CubeCollision.Application.csproj
+++ b/CubeCollision/CubeCollision.Application/CubeCollision.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CubeCollision.Domain\CubeCollision.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
